# authpilot

./: .gitignore  README.md  load-demo-data.js  pipeline-result.json  render.yaml  test-pipeline.js
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
backend/: .env.example  Cargo.toml  render.yaml
backend/src/: health.rs  main.rs
backend/src/fhir/: mod.rs
backend/src/mcp/: mod.rs
backend/src/tools/: auth_check.rs  fhir_fetch.rs  justification.rs  mod.rs  pa_submit.rs
docs/: DEVPOST_SUBMISSION.md  MARKETPLACE_LISTING.md
frontend/: next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
scripts/: demo-patient-ids.json
